feat: extend api to set background- and text-color
